--- a/Kitodo/src/main/webapp/pages/MassImportPage2.xhtml
+++ b/Kitodo/src/main/webapp/pages/MassImportPage2.xhtml
@@ -26,6 +26,7 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:t="http://myfaces.apache.org/tomahawk"
+    xmlns:p="http://primefaces.org/ui"
     >
     <f:view locale="#{SpracheForm.locale}">
         <ui:include src="inc/head.xhtml" />
@@ -148,12 +149,7 @@
                                                             <!--  Date  -->
                                                             <h:panelGroup id="prpvw15_5"
                                                                           rendered="#{(property.type.name == 'date')}">
-                                                                <!-- TODO: use PrimeFaces calendar tag as replacement for RichFaces calendar tag! -->
-                                                                <!--<rich:calendar id="calendar" datePattern="dd.MM.yyyy"-->
-                                                                               <!--value="#{property.value}"-->
-                                                                               <!--enableManualInput="true"-->
-                                                                               <!--required="#{property.required}">-->
-                                                                <!--</rich:calendar>-->
+                                                                <p:calendar id="prpvw15_5_1" style="width: 500px;margin-right:15px" value="#{property.value}" locale="#{SpracheForm.locale}" navigator="true" pattern="dd.MM.yyyy" />
                                                             </h:panelGroup>
                                                         </h:column>
                                                     </t:dataTable>
