Show correct value in project list

--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -45,7 +45,7 @@
                         <h:outputText value="#{project.fileFormatInternal}"/>
 
                         <h:outputText value="DMS Exportformat:"/>
-                        <h:outputText value="#{project.fileFormatInternal}"/>
+                        <h:outputText value="#{project.fileFormatDmsExport}"/>
 
                         <h:outputText value="METS-Rechteinhaber:"/>
                         <h:outputText value="Uni Hamburg"/>
