--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -20,7 +20,7 @@
         <p:panel id="listWrapper" style="width: 95%; margin: auto; border-radius: 5px; padding: 0;">
             <p:panel style="text-align: left; position: relative; padding: 5px;">
                 <h3 style="display: inline;">Projekte</h3>
-                <p:button value="Neues Projekt" style="right: 5px; bottom: 5px; position: absolute;" icon="fa fa-plus-circle fa-lg"/>
+                <p:button outcome="projectEdit" value="Neues Projekt" style="right: 5px; bottom: 5px; position: absolute;" icon="fa fa-plus-circle fa-lg"/>
             </p:panel>
             <p:dataTable var="project" value="#{ProjekteForm.projects}" style="margin-top: 10px;">
                 <p:column style="width: 16px;">
