--- a/Kitodo/src/main/webapp/pages/inc_editProjects/editorTab.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_editProjects/editorTab.xhtml
@@ -18,9 +18,9 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:pe="http://primefaces.org/ui/extensions"
     >
-    <pe:remoteCommand name="loadProjectConfiguration" update="editorWrapper" actionListener="#{ProjekteForm.loadXMLConfiguration('PROJECT')}"/>
-    <pe:remoteCommand name="loadMetadataDisplayRules" update="editorWrapper" actionListener="#{ProjekteForm.loadXMLConfiguration('DISPLAY_RULES')}"/>
-    <pe:remoteCommand name="loadDigitalCollections" update="editorWrapper" actionListener="#{ProjekteForm.loadXMLConfiguration('DIGITAL_COLLECTIONS')}"/>
+    <pe:remoteCommand name="loadProjectConfiguration" update="editorWrapper" actionListener="#{ProjekteForm.loadProjectConfiguration}"/>
+    <pe:remoteCommand name="loadMetadataDisplayRules" update="editorWrapper" actionListener="#{ProjekteForm.loadDisplayRulesConfiguration}"/>
+    <pe:remoteCommand name="loadDigitalCollections" update="editorWrapper" actionListener="#{ProjekteForm.loadDigitalCollectionsConfiguration}"/>
     <p:commandButton value="#{msgs.projectConfiguration}" onclick="loadProjectConfiguration()" />
     <p:commandButton value="#{msgs.displayRules}" onclick="loadMetadataDisplayRules()" />
     <p:commandButton value="#{msgs.digitaleKollektionen}" onclick="loadDigitalCollections()" />
