Fix indexing label for template properties

--- a/Kitodo/src/main/webapp/pages/Indexing.xhtml
+++ b/Kitodo/src/main/webapp/pages/Indexing.xhtml
@@ -358,7 +358,7 @@
 
                                             <!-- Templates -->
                                             <tr>
-                                                <td><h:outputText value="#{msgs.prozessvorlagen}"/></td>
+                                                <td><h:outputText value="#{msgs.templateProperties}"/></td>
                                                 <td>
                                                     <p:commandButton widgetVar="startIndexingTemplates"
                                                                      onclick="PF('templatesProgress').start();toggleButtons(false);"
