--- a/Kitodo/src/main/webapp/pages/ProzessverwaltungSuche.xhtml
+++ b/Kitodo/src/main/webapp/pages/ProzessverwaltungSuche.xhtml
@@ -140,7 +140,7 @@
                                                             </h:panelGroup>
                                                         </h:panelGroup>
                                                         <!-- template property -->
-                                                        <h:outputText value="#{msgs.templateProperties}: "/>
+                                                        <h:outputText value="#{msgs.templateProperty}: "/>
                                                         <h:panelGroup>
                                                             <h:selectOneMenu value="#{SearchForm.templatePropertyOperand}"
                                                                              style="width:115px; margin-right:3px">
