Remove msgs.get - method get doesn't exists in PropertyResourceBundle

--- a/Kitodo/src/main/webapp/pages/ProzessverwaltungSuche.xhtml
+++ b/Kitodo/src/main/webapp/pages/ProzessverwaltungSuche.xhtml
@@ -170,7 +170,7 @@
                                                                                  style="width:175px; margin-right:3px">
                                                                     <f:selectItems value="#{SearchForm.stepstatus}"
                                                                                     var="stepstatus"
-                                                                                    itemLabel="#{msgs.get(stepstatus.title)}"
+                                                                                    itemLabel="#{stepstatus.title}"
                                                                                     itemValue="#{stepstatus.searchString}"/>
                                                                 </h:selectOneMenu>
                                                                 <h:selectOneMenu value="#{SearchForm.stepname}"
