--- a/Kitodo/src/main/webapp/pages/inc_AktuelleSchritte/Schritte_Liste_DetailsKlein.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_AktuelleSchritte/Schritte_Liste_DetailsKlein.xhtml
@@ -91,7 +91,7 @@
                             <h:outputText value="#{msgs.aktualisierungstyp}:"/>
                         </td>
                         <td>
-                            <h:outputText value="#{msgs.get(item.editTypeEnum.title)}"/>
+                            <h:outputText value="#{item.editTypeEnum.title}"/>
                         </td>
                     </tr>
                 </table>
