--- a/Kitodo/src/main/webapp/pages/inc_Batches/batch_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Batches/batch_box_Details.xhtml
@@ -98,7 +98,7 @@
                                 </td>
                                 <td>
                                     <h:outputText
-                                            value="#{msgs.get(AktuelleSchritteForm.batchHelper.currentStep.processingStatus.title)}"/>
+                                            value="#{AktuelleSchritteForm.batchHelper.currentStep.processingStatus.title}"/>
                                 </td>
                             </tr>
 
@@ -131,7 +131,7 @@
                                     </td>
                                     <td>
                                         <h:outputText
-                                                value="#{msgs.get(AktuelleSchritteForm.batchHelper.currentStep.editTypeEnum.title)}"/>
+                                                value="#{AktuelleSchritteForm.batchHelper.currentStep.editTypeEnum.title}"/>
                                     </td>
                                 </tr>
                             </ui:fragment>
