--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/prozess_box_Schritte.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/prozess_box_Schritte.xhtml
@@ -139,7 +139,7 @@
             <p:panelGrid columns="2" id="statuscolumn" styleClass="ui-noborder" style="background: transparent">
 
                 <h:graphicImage value="#{item.processingStatusEnum.bigImagePath}"
-                                title="#{msgs.get(item.processingStatusEnum.title)}" alt=""/>
+                                title="#{item.processingStatusEnum.title}" alt=""/>
 
                 <p:panelGrid columns="1" cellpadding="0" cellspacing="0" styleClass="ui-noborder"
                              style="background: transparent"
