--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Details.xhtml
@@ -148,7 +148,7 @@
                                 <h:outputText value="#{msgs.status}:"/>
                             </td>
                             <td>
-                                <h:outputText value="#{msgs.get(ProzessverwaltungForm.mySchritt.processingStatusEnum.title)}"/>
+                                <h:outputText value="#{ProzessverwaltungForm.mySchritt.processingStatusEnum.title}"/>
                             </td>
                         </tr>
                     </table>
