Remove of usage other forms inside the ProzessverwaltungForm and update save / remove task

--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Benutzer.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Benutzer.xhtml
@@ -55,7 +55,7 @@
     <!-- Add user -->
     <h:panelGroup>
         <p:commandLink value="#{msgs.benutzerHinzufuegen}"
-                       actionListener="#{BenutzerverwaltungForm.filterKeinMitZurueck()}"
+                       actionListener="#{ProzessverwaltungForm.activeUsers}"
                        oncomplete="PF('addUserDialog').show()"
                        styleClass="standardlink"/>
         <p:dialog widgetVar="addUserDialog" header="#{msgs.benutzerHinzufuegen}"
