--- a/Kitodo/src/main/webapp/pages/inc_editProjects/detailsTab.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_editProjects/detailsTab.xhtml
@@ -26,11 +26,10 @@
             <h:outputLabel id="id17" for="titel"
                            value="#{msgs.titel}"/>
             <h:panelGroup id="id18">
-                <h:inputText id="titel"
+                <t:inputText id="titel"
                              style="width: 200px;margin-right:15px"
-                             value="#{ProjekteForm.myProjekt.title}"
-                             required="true"/>
-                <t:message id="id19" for="titel" style="color: red"
+                             value="#{ProjekteForm.myProjekt.title}"/>
+                <t:message id="messagesTitle" for="titel" style="color: red"
                            replaceIdWithLabel="true"/>
             </h:panelGroup>
 
